# Anya-core

./: .gitattributes  .gitignore  .gitignore.docs  .gitleaks.toml  .gitmodules  .mailmap  .markdownlint.json  .nojekyll  ACTION_PLAN_JUNE_2025.md  AGENT_ARCHITECTURE.md  AI_LABELING_IMPLEMENTATION.md  AI_LABELLING.md  ANYA_CORE_HA_TESTING_COMPLETION_REPORT.md  API_REFERENCE.md  ASYNC_LAYER2_BENCHMARKS.md  ASYNC_LAYER2_IMPLEMENTATION_COMPLETE.md  ASYNC_LAYER2_IMPLEMENTATION_GUIDE.md  ASYNC_LAYER2_IMPLEMENTATION_STATUS.md  ASYNC_LAYER2_MCP_STATUS_REPORT.md  ASYNC_LAYER2_STATUS_REPORT.md  AUDIT_d9b0c3f.md  BIP353_IMPLEMENTATION_CHECKLIST.md  BITCOIN_FRAMEWORK_IMPLEMENTATION.md  BRANCH_MANAGEMENT_SUMMARY.md  BRANCH_PROTECTION_SUMMARY.md  BRANCH_RULE_RESOLUTION_ACTION_PLAN.md  BRANCH_RULE_VIOLATION_RESOLUTION.md  BUILD_REQUIREMENTS.md  CANONICAL_SOURCE_OF_TRUTH_FINAL_IMPLEMENTATION.md  CARGO_FEATURES_GUIDE.md  CARGO_WORKSPACE_FIXGUIDE.md  CHANGELOG.md  CLEANUP_REMOVED_FILES_MANIFEST.md  CLEANUP_SUMMARY.md  CODEBASE_FIXES.md  CODE_OF_CONDUCT.md  COMMIT_COMPLETION_SUMMARY.md  COMMIT_GROUPING_PLAN.md  COMMIT_INSTRUCTIONS.md  COMMIT_LABELING_COMPLETION_SUMMARY.md  (+285 more)
anya-bitcoin/: Cargo.toml  README.md  lib.rs  mod.rs  reorganize.md
anya-bitcoin/adapters/: mod.rs
anya-bitcoin/core/: mod.rs
anya-bitcoin/layer2/: mod.rs
anya-bitcoin/ports/: blockchain_port.rs  consensus_port.rs  layer2_port.rs  mod.rs  transaction_port.rs  validation_port.rs
anya-bitcoin/security/: mod.rs
anya-bitcoin/src/: error.rs  lib.rs  prelude.rs
anya-bitcoin/testing/: mod.rs
anya-core/: Cargo.toml  Cargo.toml (lines 1-28)  Cargo.toml.anyacore  Cargo.toml.bak
anya-core-pkg/: Cargo.toml
anya-core/.cursor/: mcp.json
anya-core/codeql/: bitcoin-protocol-security.qls  crypto-validation.qls
anya-core/src/: lib.rs  main.rs  tapscript.rs
anya-enterprise/: CHANGELOG.md  Cargo.toml  README.md
anya-enterprise/docs/: SUMMARY.md
anya-enterprise/src/: compliance.rs  lib.rs  security.rs  trading.rs
anya-extensions/: Cargo.toml
anya-extensions/docs/: SUMMARY.md
anya-ml/: Cargo.toml
anya-ml/src/: lib.rs
anya-web5-service/: Cargo.toml
anya-web5-service/src/: adapter.rs  main.rs
anyacore/: Cargo.toml
anyacore/src/: bdf_compliance.rs  lib.rs  privacy.rs  psbt.rs  tapscript.rs
bitcoin-adapter/: Cargo.toml
bitcoin-adapter/src/: lib.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: bip_compliance.rs  chaos.rs  error.rs  lib.rs  platform.rs  psbt.rs  repo_analysis.rs
core/tests/: l4_protocol_tests.rs
crates/dummy-sqlx-mysql/: Cargo.toml  lib.rs
dependencies/anya-bitcoin/: Cargo.toml  Cargo.toml (lines 26-29)
dlc-oracle/: Cargo.toml
dlc-oracle/src/: lib.rs
enterprise/: Cargo.toml
enterprise/src/: lib.rs
extensions/enterprise/: Cargo.toml
extensions/mobile/: Cargo.toml
installer/: Cargo.toml  configure.ps1
installer/src/: hardware.rs  lib.rs  main.rs  network.rs
mobile/: Cargo.toml
mobile-sdk/: Cargo.toml
mobile/lib/: bitcoin.dart
mobile/src/: BitcoinSDK.tsx  compliance.rs  hsm.rs  lib.rs  security.rs
scripts/: Cargo.toml  Install-AnyaCore.ps1  README.md  README_AI_LABELING.md  README_DOC_REVIEW.md  README_DOC_STATUS.md  README_LINK_CHECKER.md  README_TOC_GENERATOR.md  README_UPDATE_DOCS.md  Update-SecurityPatterns.ps1  add_labels.sh  align_docs.sh  assess_production_readiness.sh  auto-align-fixes.ps1  auto_fix.sh  auto_promote_network.sh  background_tests.sh  backup_recovery.sh  batch_commit.ps1  batch_commit.sh  bdf-compliance.sh  bitcoin_maintenance.sh  build_deb.sh  check-branch-protection.sh  check-unused-deps.sh  check_blockchain_metrics.sh  check_cross_references.sh  check_docs.sh  check_links.py  check_links.sh  check_test_status.sh  clean-branches.ps1  cleanup-docs.sh  cleanup-gh-pages-test.sh  cleanup-test-duplicates.sh  cleanup.sh  cleanup_legacy.sh  cleanup_todos.py  cleanup_warnings.sh  commit-changes.sh  (+177 more)
scripts/ai/: train_model.py
scripts/api/: implement_api_standards.ps1  test_api_standards.ps1
scripts/audit/: system_audit.sh
scripts/automation/: ci_pipeline.sh  dao_agent_automation.sh  dao_agent_automation_fixed.sh  deploy_business_agents.sh
scripts/bip/: Makefile  check-health.ps1  check-health.sh  manual-bip-check.ps1
scripts/bitcoin/: config.js  crypto-utils.js  mcp-server-fixed.js  mcp-server.js  merge_pr.ps1  run_pr_checks.ps1  rust-bridge.js  security-validator.js  validate-bip-compliance.js  validate-security.js
scripts/certik/: generate_report.py  test-all.sh  update_metrics.py  validate_anya.sh
scripts/ci/: test_workflows_local.sh
scripts/common/: GitHub-Auth.psm1  github-auth.js  github-auth.sh  utils.sh
scripts/core/: server_setup.sh  system_setup.sh  test.sh
scripts/deployment/: setup_workspace.sh
scripts/dev/: build-linux.sh  build.sh
scripts/enterprise/: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  commit.sh  implement_enterprise_enhancements.ps1  implement_federated_learning.ps1  implement_multisig_schemes.ps1  setup.sh  test.sh  test_enterprise_enhancements.ps1
scripts/fixes/: analyze_yaml_workflows.ps1  fix_bitcoin_imports.ps1  fix_doc_comments.ps1  fix_validation_syntax.ps1  fix_yaml_workflows.ps1  run_all_fixes.ps1
scripts/hooks/: pre-commit
scripts/install/: README.md  auto_config_system.sh  auto_install.sh  dashboard.sh  install-anya.sh  install-clarinet.sh  install-master.sh  linux_install.sh  main_installer.sh  systemd_config.sh  test_install.sh  unified_install_framework.sh  uninstall.sh  validator.js
scripts/integration/: hardware_system_integration.py
scripts/lib/: bitcoin-common.js  bitcoin_standards.sh  common.sh  core.sh  environment.sh  logging.psm1  module_manager.sh  system-setup.sh
scripts/lint/: security-rules.js
scripts/maintenance/: cleanup_warnings.sh  prepare_bitcoin_drives.sh  script_cleanup.sh  script_manager.sh
scripts/mcp/: init-toolbox.sh  manage-tools.sh  test-mcp-setup.sh
scripts/ops/: deprecation_manager.sh  health_check.sh  log_manager.sh  ml_deprecation.sh  prometheus_exporter.sh
scripts/test/: README.md  (+14 more)
(+2781 files in other folders)
