[package]
name = "anya-bitcoin"
version = "0.1.0"
edition = "2021"
description = "Bitcoin implementation following hexagonal architecture principles"
authors = ["bo_thebig <botshelomokokoka@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bitcoin = "0.32"
tokio = "1.45.1"
serde = "1.0.219"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hex = "0.4.3"
log = "0.4.27"
futures = "0.3.31"
secp256k1 = "0.29"
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
rand = "0.8.5"
bitflags = "2.5.0"
serde_json = "1.0"

[dev-dependencies]
mockall = "0.11.3"
tempfile = "3.5.0"
test-log = "0.2.11"

[lib]
name = "anya_bitcoin"
path = "src/lib.rs"