[package]
name = "anya-bitcoin"
version = "1.2.0"
edition = "2021"
description = "Bitcoin implementation following hexagonal architecture principles"
authors = ["bo_thebig <botshelomokokoka@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bitcoin = "=0.32.6"
tokio = { version = "1.45.1", features = ["full", "test-util"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
hex = "0.4.3"
log = "0.4.27"
futures = "0.3.31"
secp256k1 = "0.29"
chrono = "0.4.31"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
rand = "0.8.5"
bitflags = "2.5.0"
serde_json = "1.0"
futures-io = "0.3"
bitcoin_hashes = "0.13.0"
reqwest = { version = "0.11", features = ["json"] }
ethers = { version = "2.0", features = ["rustls"] }
jsonrpsee = { version = "0.18", features = ["http-client"] }
backoff = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
mockall = "0.11.3"
tempfile = "3.5.0"
test-log = "0.2.11"
wiremock = "0.5"

[lib]
name = "anya_bitcoin"
path = "src/lib.rs"