[package]
name = "anya-bitcoin"
version = "1.2.0"
edition = "2021"
description = "Bitcoin implementation following hexagonal architecture principles"
authors = ["bo_thebig <botshelomokokoka@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bitcoin = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
secp256k1 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
bitflags = { workspace = true }
serde_json = { workspace = true }
futures-io = { workspace = true }
bitcoin_hashes = { workspace = true }
reqwest = { workspace = true }
ethers = { workspace = true }
jsonrpsee = { workspace = true }
backoff = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
wiremock = { workspace = true }

[lib]
name = "anya_bitcoin"
path = "src/lib.rs"