[package]
name = "anya-core-pkg"
version = "0.1.0"
edition = "2021"
authors = ["Anya Maintainers"]
license = "Apache-2.0"
description = "Bitcoin Layer 4 Protocol Implementation"
repository = "https://github.com/anya-org/anya-core"
readme = "README.md"

[lib]
path = "src/lib.rs"
name = "anya_core"

[dependencies]
# Use workspace-relative paths instead of version numbers
bitcoin = { workspace = true, features = ["bip341"] }
secp256k1 = { workspace = true, features = ["serde", "bitcoin_hashes"] }
anya-core = { path = "../anya-core", features = ["bip341"] }
hex-literal = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "anya-core-mcp"
path = "../src/bin/anya-core-mcp.rs"

[features]
default = ["bip341", "secp256k1/std"]
bip341 = [
    "bitcoin/bip341",
    "secp256k1/bitcoin_hashes",
    "anya-core/bip341"  # Ensure feature propagation
]
