[workspace]
members = [
    "core",
    "cli", 
    "installer",
    "mobile",
    "dependencies/anya-bitcoin"  # Correct path format
]

# Consolidated workspace dependencies
[workspace.dependencies]
# Unified cryptographic stack
secp256k1 = { version = "0.29.0", features = ["global-context"] }
bitcoin = { version = "0.33.0", features = ["taproot", "mobile"] }
bitcoincore-rpc = "0.17.0"

# Shared workspace dependencies
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
web5 = { git = "https://github.com/TBD54566975/web5-rs" }

# Standardized versions for shared dependencies
anyhow = "1.0.75"
thiserror = "1.0"
async-trait = "0.1.77"
serde_json = "1.0.133"

# Additional dependencies
secp256k1-zkp = { version = "0.8.0", features = ["vendored"] }  # Add ZKP framework 

[package]
name = "anya-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
# Inherited from workspace
secp256k1.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
web5.workspace = true
bdk.workspace = true

# Security Validation (BDF ยง3.3)
ring = { version = "0.17.12", features = ["alloc"] }
sha2 = "0.10.8"

[features]
default = ["bip174", "bip341"]
bip174 = ["bitcoin/bip174", "secp256k1/bip174"]
bip341 = ["bitcoin/bip341", "secp256k1/bip341"]
mobile = ["bitcoin/mobile", "secp256k1/mobile"]

[lib]
name = "anya"
path = "src/lib.rs"

[[bin]]
name = "anya"
path = "src/main.rs"

# ... other binary definitions ... 

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true 