[package]
name = "anya-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
# Inherited from workspace
secp256k1.workspace = true
bitcoin = { version = "0.32", features = ["std", "serde", "rand", "bitcoinconsensus", "secp-recovery", "base64", "rand-std", "bitcoinconsensus-std"], optional = true }
bitcoincore-rpc.workspace = true
web5.workspace = true
bdk.workspace = true

# Security Validation (BDF ยง3.3)
ring = { version = "0.17.12", features = ["alloc"] }
sha2 = "0.10.8"

[features]
default = ["bip174", "bip341"]
bip174 = ["bitcoin/bip174", "secp256k1/bip174"]
bip341 = ["bitcoin/bip341", "secp256k1/bip341"]
mobile = ["bitcoin/mobile", "secp256k1/mobile"]

[lib]
name = "anya"
path = "src/lib.rs"

[[bin]]
name = "anya"
path = "src/main.rs"

# ... other binary definitions ... 

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
debug = true
