[package]
name = "anya-enterprise"
version.workspace = true
edition = "2021"
authors.workspace = true
license.workspace = true
description = "Enterprise features for Anya Core"

[dependencies]
anya-core = { path = "../anya-core", version.workspace = true }
secp256k1.workspace = true

# Audit Trail Compliance (BDF ยง5.3)
opentelemetry = { version = "0.21.0", features = ["metrics"] }

[features]
default = ["advanced-security"]
advanced-security = ["secp256k1/zkp", "opentelemetry"]
