[package]
name = "anya-enterprise"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Enterprise features for Anya Core Bitcoin Implementation"

[dependencies]
anya-core = { path = ".." }
secp256k1 = { workspace = true }
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true }

# Audit Trail Compliance (BDF ยง5.3)
opentelemetry = { version = "0.21.0", features = ["metrics"], optional = true }

[features]
default = ["advanced-security"]
advanced-security = ["opentelemetry"]