[package]
name = "anya-extensions"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
description = "Extensions for Anya Core Bitcoin Capabilities"

[lib]
name = "anya_extensions"
path = "src/lib.rs"

[dependencies]
# Core Dependencies
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = "0.4"
metrics = "0.23"
thiserror = "2.0"

# Blockchain Integration
bitcoin = { workspace = true, features = ["rand"] }

# Web5 Integration
web5 = { workspace = true }

# Internal Dependencies
anya_core = { path = ".." }

# Correct workspace inheritance
secp256k1 = { workspace = true }
bitcoincore-rpc = { workspace = true, optional = true }

[features]
default = ["standard"]
standard = []
advanced = ["standard"]
enterprise = ["advanced"]
