[package]
name = "anya-web5-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
web5-rust = "2.0.0-beta9"
# Add any other dependencies needed for DID, DWN, VC
